@@ -6,6 +6,7 @@ git-annex (5.20150410) UNRELEASED; urgency=medium
     with the same name as a git ref. Now fixed.
   * info dir: Added information about repositories that
     contain files in the specified directory.
+  * info: Added --bytes option.
 
  -- Joey Hess <id@joeyh.name>  Thu, 09 Apr 2015 20:59:43 -0400
 
